src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__episode_details_ui__episode_details_ui_tests__tests__snapshot_tests__episode_details_EpisodeHistoryDetails_1.snap
---
source: src/ui/sonarr_ui/library/episode_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Episode Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Details │ History │ File │ Manual Search                                                                                 │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │   Source Title                                 Event Type        Language        Quality         Date                    │                     
                    │=> Test source                                  grabbed           English         Bluray-1080p    2024-02-10 07:28:45 UTC │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                              ╭────────────────────────  Details  ─────────────────────────╮                              │                     
                    │                              │Source Title: Test source                                   │                              │                     
                    │                              │Indexer:                                                    │                              │                     
                    │                              │Release Group:                                              │                              │                     
                    │                              │Series Match Type:                                          │                              │                     
                    │                              │NZB Info URL:                                               │                              │                     
                    │                              │Download Client Name:                                       │                              │                     
                    │                              ╰────────────────────────────────────────────────────────────╯                              │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
